tests/NormalTests/paczka1/fuzzy1/61568249.err
Error in line 16: 4rOl0BK64 A17 65,?
Error in line 9: A248 A231 30,5
Error in line 12: mVwU0jy0 A231 387,9
Error in line 26: uNYek A737 25,7
Error in line 23: mVwU0jy0 A248 2,2
Error in line 24: 4rOl0BK64 A737 97,4
Error in line 39: A248 A231 70,17
